--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="navbar-brand nav-link" href ="https://github.com/teagz17/PROG1400">PROG1400 Repository</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="navbar-brand nav-link" href ="https://github.com/teagz17/PROG2700">PROG2700 Repository</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -33,34 +36,34 @@
     <main>
         <div class="main-container" id="contents">
             <h1>Table of Contents</h1>
-            <ul class="content-links">
-            <li>
-                <a class="main-link" href="#welcome">- About Me</a>
-            </li>
-            <li>
-                <a class="main-link" href="#resume">- IT Industry Experience</a>
-            </li>
-            <li>
-                <a class="main-link" href="#learning-narr">- Learning Narrative and Certifications</a>
-            </li>
-            <li>
-                <a class="main-link" href="#my-links">- Some of my work</a>
-            </li>
-            </ul>
+                <ul class="content-links">
+                    <li class="nav-item">
+                        <a class="main-link" href="#welcome">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="main-link" href="#resume">IT Industry Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="main-link" href="#my-links">Webpages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="main-link" href="#other-work">Other Work</a>
+                    </li>
+                </ul>
         </div>
         <div class="grid-container" id="grid1">
             <div class="grid-item" id="welcome">
                 <h1>About me</h1>
                 <p>
                     Hi! Welcome to my portfolio page. My name is Teagan and I am 26 years old. I 
-                    am from Inverness, Nova Scotia, and I am currently in my second year of the IT 
+                    am from Strathlorne, Nova Scotia, and I am currently in my second year of the IT 
                     Generalist program at NSCC. After graduating in June, my plan is to gain experience
-                    in the IT industry, while also focusing on improving my skills surrounding networkingm
+                    in the IT industry, while also focusing on improving my skills surrounding networking
                     and learning more about cybersecurity.
                 </p>
             </div>
-            <div class="grid-item" id="picture">
-                <p>pictures will go here</p>
+            <div class="grid-item" id="picture-container">
+                <img src="images/self.jpg" id="portrait">
             </div>
         </div>
         <div class="main-container" id="resume">
@@ -76,6 +79,7 @@
                 <li>Ran and terminated cables for the Trackman system</li>
             </ul>
         </div>
+        <!--
         <div class="grid-container" id="grid2">
             <div class="grid-item" id="learning-narr">
                 <h1>Learning Narrative</h1>
@@ -85,17 +89,18 @@
                 <p>Coming soon!</p>
             </div>
         </div>
+        -->
         <div class="main-container" id="my-links">
-            <h1>Some of my work:</h1>
-            <h2>WEBD1000 Assignments and Exercises</h2>
+            <h1>WEBD1000: Website Development</h2>
+            <h3>Webpages from my first year web design class.</h3>
                 <section id="Module-1">
-                    <h1>Module 1</h1>
+                    <h1>Module 1</h2>
                     <a class="main-link" href ="https://teagz17.github.io/WEBD1000/Module_1/w0302952_WEBD1000_First_Web_Page.html">Basic Responsive Webpage</a>
                     <p>A simple responsive webpage showing a table with different network diagramming symbols.</p>
-                    </section>
+                </section>
                 <section id="Module-2">
                     <h1>Module 2</h1>
-                    <a class="main-link" href ="https://teagz17.github.io/WEBD1000/Module_2_CSS/Blackjack_CSS_exercise.html">CSS Exercise</a>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD1000/Module_2_CSS/Blackjack_CSS_exercise.html">CSS Exercise</a>
                     <p>The homepage for "Blackjack Tequila", a fake (for now) tequila company. Designed using CSS.</p>
                 </section>
                 <section id="Module-3">
@@ -108,6 +113,49 @@
                     <a class="main-link" href="https://teagz17.github.io/WEBD1000/Personal_Portfolio/">Personal Portfolio Page</a>
                     <p>A personal portfolio webpage, our final WEBD1000 assignment.</p>
                 </section>
+            <h1>WEBD3200: Web Design Fundamentals</h1>
+            <h3>Webpages from my second year web design class.</h3>
+                <section>
+                    <h1>Module 1</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD3100/working-with-css/index.html">Working with CSS</a>
+                    <p>A homepage for a local transit service, designed to look like its actual homepage.</p>
+                </section>
+                <section>
+                    <h1>Module 2</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD3100/SAT-Design-v2/index.html">SAT Design v2</a>
+                    <p>A homepage for the same transit service, designed by me.</p>
+                </section>
+                <section>
+                    <h1>Final Project</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD3100/Final-Project/index.html">RideShare Homepage</a>
+                    <p>A homepage for a rideshare service, designed by me.</p>
+                </section>
+        </div>
+        <div class="main-container" id="other-work">
+            <h1>Other work</h1>
+            <h2>Web Design Final</h2>
+            <p>Colour pallette and font sample for the RideShare website.</p>
+            <div class="pics">
+                <img src="/images/WEBD3700 Final/styleguide-1.png">
+            </div>
+            <p>Wireframe and design for the RideShare webpages.</p>
+            <div class="inline-pics">
+                <img src="/images/WEBD3700 Final/mobile-frame.png">
+                <img src="/images/WEBD3700 Final/mobile-design.png">
+            </div>
+            <div class="pics">
+                <img src="images/WEBD3700 Final/desktop-frame.png">
+                <img src="images/WEBD3700 Final/desktop-design.png">
+            </div>
+            <h2>Capstone Project</h2>
+            <p>GNS3 simulations of the network my team built for our Capstone project, a rideshare app for NSCC students.</p>
+            <p>The first picture is the original network layout we came up with, and the second picture is the final network layout.</p>
+            <div class="inline-pics">
+                <img src="images/Capstone network/gns-v1.png">
+                <img src="images/Capstone network/gns-final.png">
+            </div>
+            <p>The infrastructure consists of two firewalls, two Cisco switches, a DNS server, a load balancing server, a cluster management server, and a Kubernetes cluster made up of three control plane nodes and six worker nodes.
+                My team also connected our workstations to the physical network so that we could use SSH to manage every device on from our desks.</p>
         </div>
     </main>
     <div class="separator"></div>
