fixed image paths

--- a/index.html
+++ b/index.html
@@ -136,23 +136,23 @@
             <h2>Web Design Final</h2>
             <p>Colour pallette and font sample for the RideShare website.</p>
             <div class="pics">
-                <img src="/images/WEBD3700 Final/styleguide-1.png">
+                <img src="/images/WEBD3700-Final/styleguide-1.png">
             </div>
             <p>Wireframe and design for the RideShare webpages.</p>
             <div class="inline-pics">
-                <img src="/images/WEBD3700 Final/mobile-frame.png">
-                <img src="/images/WEBD3700 Final/mobile-design.png">
+                <img src="/images/WEBD3700-Final/mobile-frame.png">
+                <img src="/images/WEBD3700-Final/mobile-design.png">
             </div>
             <div class="pics">
-                <img src="images/WEBD3700 Final/desktop-frame.png">
-                <img src="images/WEBD3700 Final/desktop-design.png">
+                <img src="images/WEBD3700-Final/desktop-frame.png">
+                <img src="images/WEBD3700-Final/desktop-design.png">
             </div>
             <h2>Capstone Project</h2>
             <p>GNS3 simulations of the network my team built for our Capstone project, a rideshare app for NSCC students.</p>
             <p>The first picture is the original network layout we came up with, and the second picture is the final network layout.</p>
             <div class="inline-pics">
-                <img src="images/Capstone network/gns-v1.png">
-                <img src="images/Capstone network/gns-final.png">
+                <img src="images/Capstone-network/gns-v1.png">
+                <img src="images/Capstone-network/gns-final.png">
             </div>
             <p>The infrastructure consists of two firewalls, two Cisco switches, a DNS server, a load balancing server, a cluster management server, and a Kubernetes cluster made up of three control plane nodes and six worker nodes.
                 My team also connected our workstations to the physical network so that we could use SSH to manage every device on from our desks.</p>
