--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h2>Web Design Final</h2>
             <p>Colour pallette and font sample for the RideShare website.</p>
             <div class="pics">
-                <img src="/images/WEBD3700-Final/styleguide-1.png">
+                <img src="./images/WEBD3700-Final/styleguide-1.png">
             </div>
             <p>Wireframe and design for the RideShare webpages.</p>
             <div class="inline-pics">
