--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             </div>
             <p>Wireframe and design for the RideShare webpages.</p>
             <div class="inline-pics">
-                <img src="/images/WEBD3700-Final/mobile-frame.png">
-                <img src="/images/WEBD3700-Final/mobile-design.png">
+                <img src="./images/WEBD3700-Final/mobile-frame.png">
+                <img src="./images/WEBD3700-Final/mobile-design.png">
             </div>
             <div class="pics">
                 <img src="images/WEBD3700-Final/desktop-frame.png">
